plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-kapt'
    id 'dagger.hilt.android.plugin'
}

android {
    namespace 'com.dixit.mymotorwaydemo'
    compileSdk 33

    defaultConfig {
        applicationId "com.dixit.mymotorwaydemo"
        minSdk 26
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "com.dixit.mymotorwaydemo.HiltTestRunner"
        vectorDrawables {
            useSupportLibrary true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    buildFeatures {
        compose true
    }
    composeOptions {
        kotlinCompilerExtensionVersion compose_ui_version
    }
    packagingOptions {
        exclude 'META-INF/DEPENDENCIES.txt'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/LICENSE.md'
        exclude 'META-INF/LICENSE-notice.md'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/dependencies.txt'
        exclude 'META-INF/LGPL2.1'
        exclude 'META-INF/*.kotlin_module'
    }

    /**
     * sharedTest directory act as bridge between unit and instrumentation tests.
     */
    sourceSets {
        androidTest {
            java.srcDirs += "src/sharedTest/java"
        }
        test {
            java.srcDirs += "src/sharedTest/java"
        }
    }

    // Always show the result of every unit test when running via command line, even if it passes.
    testOptions.unitTests {
        includeAndroidResources true
        returnDefaultValues true
    }

    tasks.withType(Test) {
        testLogging {
            events "skipped", "failed", "passed"
        }
        jvmArgs = ['-noverify', "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"]
    }
}

dependencies {
    implementation 'androidx.core:core-ktx:1.9.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
    implementation 'androidx.activity:activity-compose:1.5.1'
    implementation "androidx.compose.ui:ui:$compose_ui_version"
    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
    implementation 'androidx.compose.material:material:1.4.0'
    implementation 'androidx.test:runner:1.5.2'

    //Dagger - Hilt
    implementation 'com.google.dagger:hilt-android:2.45'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    androidTestImplementation project(path: ':app')
    kapt 'com.google.dagger:hilt-android-compiler:2.45'
    kapt "androidx.hilt:hilt-compiler:1.0.0"

    // Local unit tests
    testImplementation "androidx.test:core:1.5.0"
    testImplementation "junit:junit:4.13.2"
    testImplementation "org.robolectric:robolectric:4.9.2"
    testImplementation "androidx.arch.core:core-testing:2.2.0"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
    testImplementation "com.google.truth:truth:1.1.3"
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
    testImplementation 'io.mockk:mockk:1.13.4'
    debugImplementation "androidx.fragment:fragment-testing:1.5.6"
    testImplementation "com.google.dagger:hilt-android-testing:2.45"
    kaptTest 'com.google.dagger:hilt-android-compiler:2.45'
    testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.45'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-android:4.9.0'
    testImplementation 'org.mockito:mockito-core:4.9.0'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.1.0'
    testImplementation "org.jetbrains.kotlin:kotlin-test:1.7.21"
    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.7.21"

    // Instrumentation tests
    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.45'
    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.45'
    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.45'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.5"
    androidTestImplementation "junit:junit:4.13.2"
    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
    androidTestImplementation "com.google.truth:truth:1.1.3"
    //noinspection GradleDependency
    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
    androidTestImplementation 'io.mockk:mockk-android:1.13.4'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation "androidx.test.espresso:espresso-intents:3.5.1"
    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"

    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
    debugImplementation "androidx.test:core:1.5.0"
}